[package]
name = "bgb-link"
version = "0.1.0"
authors = ["Kai Page <kaibug@gmail.com>"]
edition = "2018"
description = "An implementation of BGB's link protocol."
readme = "README.md"
repository = "https://github.com/Quantaly/bgb-link"
license = "MIT OR Apache-2.0"
keywords = ["bgb"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
